@@ -1293,6 +1293,8 @@ C-API
 Extension Modules
 -----------------
 
+- Issue #6848: Fix curses module build failure on OS X 10.6.
+
 - Fix a segfault in expat when given a specially crafted input lead to the
   tokenizer not stopping.
 
